--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tinymce/tinymce-react": "^6.3.0",
     "axios": "^1.11.0",
     "html-react-parser": "^5.2.6",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
